<?xml version="1.0"?>
<package format="2">
  <name>mrs_subt_planning_lib</name>
  <version>0.0.3</version>
  <description>Package for planning in darpa SubT challenge</description>

  <maintainer email="kratkvit@fel.cvut.cz">Vit Kratky</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_msgs</depend>
  <depend>libpcl-all-dev</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- <nodelet plugin="${prefix}/plugins.xml" /> -->
  </export>
</package>
